[gd_scene load_steps=3 format=3 uid="uid://dwonevxj032y"]

[ext_resource type="Script" path="res://scene/ui/warning_select_panel.gd" id="1_bbhm4"]

[sub_resource type="LabelSettings" id="LabelSettings_d6jbl"]
font_size = 32

[node name="WarningSelectPanel" type="PanelContainer"]
custom_minimum_size = Vector2(400, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bbhm4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="WarningLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "是否要覆盖配方"
label_settings = SubResource("LabelSettings_d6jbl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="YesButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 24
text = "确定"

[node name="NoButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 24
text = "取消"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
